# CPU-RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RaytracingCpp.sln
RaytracingCpp/: AABB.h  BVHNode.cpp  BVHNode.h  Camera.cpp  Camera.h  CheckeredTexture.cpp  CheckeredTexture.h  Color.cpp  Color.h  DielectricMaterial.h  DiffuseLightMaterial.h  HitData.h  ImageTexture.cpp  ImageTexture.h  LambertianMaterial.cpp  LambertianMaterial.h  ListTraceable.cpp  ListTraceable.h  MSColor.cpp  MSColor.h  Material.h  MetalMaterial.cpp  MetalMaterial.h  MovingSphereTraceable.cpp  MovingSphereTraceable.h  Point3.h  Ray.h  RaytracingCpp.vcxproj  RaytracingCpp.vcxproj.filters  RenderTarget.h  RenderTargetPPMImage.h  SolidColorTexture.h  SphereTraceable.cpp  SphereTraceable.h  StaticMeshTraceable.cpp  StaticMeshTraceable.h  Texture.h  Traceable.h  Vec3.cpp  Vec3.h  (+2 more)
RaytracingCpp/res/: IronMan2_PBR.mtl
include/: AABB.h  Camera.h  Color.h  HitData.h  Image.h  MSColor.h  Material.h  Ray.h  RenderTarget.h  Texture.h  Traceable.h  Vec3.h  common.h
include/materials/: DielectricMaterial.h  DiffuseLightMaterial.h  IsotropicMaterial.h  LambertianMaterial.h  MetalMaterial.h  NormalDbgMaterial.h  PBRMaterial.h  UVDbgMaterial.h
include/render_targets/: RenderTargetPNGImage.h  RenderTargetPPMImage.h
include/textures/: CheckeredTexture.h  ImageTexture.h  SolidColorTexture.h
include/traceables/: AARectTraceable.h  BVHNode.h  BoxTraceable.h  GLTFStaticMeshTraceable.h  ListTraceable.h  MovingSphereTraceable.h  RotateYTraceable.h  (+4 more)
src/: AABB.cpp  Color.cpp  Image.cpp  main.cpp
(+13 files in other folders)
